--- a/app/views/goal/reach.html.slim
+++ b/app/views/goal/reach.html.slim
@@ -11,8 +11,9 @@
         footer = t('reach.blockquote.footer')
 
 .container
-  .progress
-    .progress-bar.progress-bar-info.progress-bar-striped aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" role="progressbar" style=("width: 20%") 
-      span.sr-only 20% Complete
+  .progress.progress-striped.active
+    .progress-bar.progress-bar-info aria-valuemax="100" aria-valuemin="0" aria-valuenow="45" role="progressbar" style="width: 45%" 
+        strong = t('reach.percent_completed', percent: 45)
+
 
 
