--- a/app/assets/stylesheets/goal.css.less
+++ b/app/assets/stylesheets/goal.css.less
@@ -1,3 +1,39 @@
-// Place all the styles related to the Goal controller here.
-// They will automatically be included in application.css.
-// You can use Less here: http://lesscss.org/
+.noUi-handle {
+  background-color: #5bc0de;
+}
+
+.panel-heading {
+  h3 {
+    margin-top: 10px;
+  }
+}
+
+#reach-progress {
+  .progress-bar {
+    width: 1%;
+  }
+}
+
+#stats_panel {
+  .icon {
+    float: left;
+    margin-right: 10px;
+    text-align: center;
+    width: 30px;
+  }
+  p {
+    float: left;
+    font-size: 18px;
+    span {
+      margin-left: 5px;
+      font-weight: bold;
+    }
+  }
+  #help_bets-count {
+    cursor: pointer;
+    border-bottom: 1px dotted black;
+  }
+  .tooltip {
+    font-size: 16px;
+  }
+}
