--- a/app/views/goal/reach.html.slim
+++ b/app/views/goal/reach.html.slim
@@ -1,5 +1,5 @@
-.row
-  .container
+.container
+  .row
     .page-title.text-center
     h1
       = t('reach.title')
@@ -9,11 +9,48 @@
       blockquote.blockquote-reverse
         p = t('reach.blockquote.text')
         footer = t('reach.blockquote.footer')
-
 .container
-  .progress.progress-striped.active
-    .progress-bar.progress-bar-info aria-valuemax="100" aria-valuemin="0" aria-valuenow="45" role="progressbar" style="width: 45%" 
-        strong = t('reach.percent_completed', percent: 45)
-
-
+  .row
+    .progress.progress-striped.active#reach-progress
+      .progress-bar.progress-bar-info role="progressbar"
+          strong
+            span.percent = 1
+            = t('reach.percent_completed')
+    .col-md-6
+      .panel.panel-info
+        .panel-heading
+          h3 = t('reach.your_balance_now')
+        .panel-body
+          p
+            #current_balance_slider.slider data-goal=@goal
+          p
+            .col-md-offset-3.col-md-5
+              .input-group
+                = text_field_tag 'current_balance', @values[:reached_progress], class: 'form-control input-lg'
+                span.input-group-addon
+                  i.fa.fa-rub.fa-2x
+    .col-md-6
+      .panel.panel-info#stats_panel
+        .panel-heading
+          h3 = t('reach.stat')
+        .panel-body
+          .container
+            .row
+              .item
+                .icon
+                  i.fa.fa-arrow-up.fa-2x
+                p
+                  = t('reach.must_multiply')
+                  span#multiply_size
+                  |x
+          .container
+            .row
+              .item
+                .icon
+                  i.fa.fa-list-ol.fa-2x
+                p
+                  = t('reach.you_can_reach')
+                  span#bets_count
+                .icon#help_bets-count data-toggle="tooltip" data-placement="right" title=t('reach.how_to')
+                  i.fa.fa-question.fa-2x
 
