strategy page was added (now as popup)

--- a/app/assets/stylesheets/goal.css.less
+++ b/app/assets/stylesheets/goal.css.less
@@ -37,3 +37,16 @@
     font-size: 16px;
   }
 }
+
+#bets_strategy-modal {
+  #balance-info {
+    display: block;
+    font-size: 22px;
+    margin-bottom: 5px;
+    position: relative;
+    text-align: center;
+    .icon {
+      margin: 0 5px;
+    }
+  }
+}
