navbar on application layout now is not fixed

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -39,7 +39,7 @@ html lang="en"
           = bootstrap_flash
           = yield
 
-    .navbar-fixed-bottom.row-fluid
+    .navbar-bottom.row-fluid
       .navbar-inner
         .container
           footer
