--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,7 +4,7 @@ html lang="en"
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    title= content_for?(:title) ? yield(:title) : "Goalbet"
+    title= content_for?(:title) ? yield(:title) : @meta_title
     = csrf_meta_tags
 
     /! Le HTML5 shim, for IE6-8 support of HTML elements
@@ -27,7 +27,7 @@ html lang="en"
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand href="#"Goalbet
+        a.navbar-brand href="#" = @nav_title
         .navbar-collapse.collapse.navbar-responsive-collapse
           ul.nav.navbar-nav
             li data-no-turbolink="" = link_to t('navbar.select_goal'), root_path
