--- a/app/views/goal/reach.html.slim
+++ b/app/views/goal/reach.html.slim
@@ -40,7 +40,7 @@
             .panel-heading
               h3 = t('reach.stat')
             .panel-body
-              .container
+              .container-fluid
                 .row
                   .item
                     .icon
@@ -49,7 +49,7 @@
                       = t('reach.must_multiply')
                       span#multiply_size
                       |x
-              .container
+              .container-fluid
                 .row
                   .item
                     .icon
@@ -64,7 +64,7 @@
         .panel-heading
           h3 = t('reach.some_information')
         .panel-body
-          .container
+          .container-fluid
             .row
               .item
                 p
