--- a/app/views/shared/_yandex_metrika.html.slim
+++ b/app/views/shared/_yandex_metrika.html.slim
@@ -1,28 +1,28 @@
 - if request.host == 'betcel.ru'
   /! Yandex.Metrika counter
   javascript:
-    | (function (d, w, c) {
-        | (w[c] = w[c] || []).push(function() {
-            | try {
-                | w.yaCounter25603646 = new Ya.Metrika({id:25603646,
-                        | webvisor:true,
-                        | clickmap:true,
-                        | trackLinks:true,
-                        | accurateTrackBounce:true});
-            | } catch(e) { }
-        | });
-    
-        | var n = d.getElementsByTagName("script")[0],
-            | s = d.createElement("script"),
-            | f = function () { n.parentNode.insertBefore(s, n); };
-        | s.type = "text/javascript";
-        | s.async = true;
-        | s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
-    
-        | if (w.opera == "[object Opera]") {
-            | d.addEventListener("DOMContentLoaded", f, false);
-        | } else { f(); }
-    | })(document, window, "yandex_metrika_callbacks");
+    (function (d, w, c) {
+      (w[c] = w[c] || []).push(function() {
+        try {
+          w.yaCounter25603646 = new Ya.Metrika({id:25603646,
+            webvisor:true,
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true});
+        } catch(e) { }
+      });
+
+      var n = d.getElementsByTagName("script")[0],
+          s = d.createElement("script"),
+          f = function () { n.parentNode.insertBefore(s, n); };
+      s.type = "text/javascript";
+      s.async = true;
+      s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+
+      if (w.opera == "[object Opera]") {
+        d.addEventListener("DOMContentLoaded", f, false);
+      } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
   noscript
     div
       img alt="" src="//mc.yandex.ru/watch/25603646" style=("position:absolute; left:-9999px;") /
