--- a/app/assets/stylesheets/goal.css.less
+++ b/app/assets/stylesheets/goal.css.less
@@ -14,6 +14,17 @@
   }
 }
 
+.next_bet_size {
+  i, #next_bet_size {
+    margin-left: 5px;
+  }
+  #next_bet_size {
+    text-shadow: 1px 1px 1px #efefef;
+  }
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
 #stats_panel, #additional_panel {
   .icon {
     float: left;
