button color for submit feedback form was changed from default to info style

--- a/app/views/feedbacks/new.html.slim
+++ b/app/views/feedbacks/new.html.slim
@@ -11,5 +11,5 @@
       = f.text_area :text, rows: 4, class: 'form-control', placeholder: t('feedback.placeholders.text')
       p.help-block = t('feedback.help_for_text')
   .form-group
-    .col-md-offset-6 = f.submit "Отправить", :class => 'btn btn-primary'
+    .col-md-offset-6 = f.submit "Отправить", :class => 'btn btn-info'
   
