plus minus buttons was added to nextbet actions

--- a/app/assets/stylesheets/goal.css.less
+++ b/app/assets/stylesheets/goal.css.less
@@ -15,14 +15,24 @@
 }
 
 .next_bet_size {
-  i, #next_bet_size {
+  .label i, #next_bet_size {
     margin-left: 5px;
   }
   #next_bet_size {
     text-shadow: 1px 1px 1px #efefef;
   }
   font-size: 25px;
+  margin-bottom: 9px;
+}
+
+.current_bet_buttons {
+  button {
+    margin-left: 5px;
+  }
   margin-bottom: 20px;
+  .tooltip {
+    font-size: 12px;
+  }
 }
 
 #stats_panel, #additional_panel {
